--- a/bika/lims/browser/batch/templates/batch_invoice.css
+++ b/bika/lims/browser/batch/templates/batch_invoice.css
@@ -14,7 +14,6 @@
 #section-content h1,
 #section-content h2,
 #section-content h3 {
-    font-weight:bold;
     padding-bottom:5px !important;
 }
 
@@ -28,12 +27,10 @@
     vertical-align:top;
 }
 #section-content .label {
-    font-weight:bold;
     padding-right: 10px;
 }
 #section-content .outofrange,
 #section-content .outofrange a {
-    font-weight:bold;
     color:#d40000;
 }
 #section-content .units,
@@ -55,14 +52,12 @@
     text-align: center;
     width: 100%;
     padding: 5px;
-    font-weight: bold;
 }
 
 #invoice-info{
     text-align: center;
     width: 100%;
     padding: 5px;
-    font-weight: bold;
 }
 
 #section-content table#section-header{
@@ -213,7 +208,7 @@
 }
 .table { display:table; table-layout:auto; width:100%; }
 .row { display:table-row !important }
-.th { display:table-cell; font-weight:bold; }
+.th { display:table-cell;}
 .td {
     display:table-cell;
     border-collapse: collapse;
@@ -281,12 +276,10 @@
     */
 }
 .an_table .header_th {
-    font-weight:bold;
     padding: 2px 2px 2px 0;
 }
 .an_table .header_td {
     text-align: center;
-    font-weight:bold;
     padding:2px;
 }
 .an_table .th {
